[package]
name = "titan-predator"
version = "206.12.0"
edition = "2021"

[[bin]]
name = "apex-singularity"
path = "main.rs"

[dependencies]
# 2026 HFT Stack
alloy = { version = "1.0", features = ["full", "pubsub", "rpc-types-eth"] }
revm = { version = "8.0", features = ["std", "serde", "memory_db", "optional_no_base_fee"] }
tokio = { version = "1.38", features = ["full", "parking_lot"] }
dashmap = "6.0"
core_affinity = "0.8"
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen_units = 1
panic = "abort"
strip = "symbols"
