[package]
name = "apex-singularity"
version = "206.14.0"
edition = "2021"

[[bin]]
name = "apex-singularity"
path = "main.rs"

[dependencies]
# Standard Alloy Features
alloy = { version = "1.0", features = ["full", "pubsub", "rpc-types-eth", "sol-types"] }
# REVM for nanosecond simulation
revm = { version = "8.0", features = ["std", "serde", "memory_db", "optional_no_base_fee"] }
tokio = { version = "1.38", features = ["full", "parking_lot"] }
dashmap = "6.0"
core_affinity = "0.8"
num_cpus = "1.16"
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"           # Fusion of all libraries into one binary
codegen_units = 1     # Highest optimization
panic = "abort"       # Minimal overhead
strip = "symbols"     # Security & Speed
